// Vitest Snapshot v1

exports[`CronJob example > Change release version 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Namespace",
    "metadata": {
      "labels": {
        "app": "example-cron-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-cron-app-development-local",
      },
      "name": "example-cron-app-test",
      "namespace": "example-cron-app-test",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "ResourceQuota",
    "metadata": {
      "labels": {
        "app": "example-cron-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-cron-app-development-local",
      },
      "name": "quota",
      "namespace": "example-cron-app-test",
    },
    "spec": {
      "hard": {
        "cpu": "200m",
        "memory": "200Mi",
        "pods": 2,
      },
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      ".dockerconfigjson": "eyJhdXRocyI6eyJodHRwczovL2luZGV4LmRvY2tlci5pby92MS8iOnsiYXV0aCI6ImMyOXRaWFZ6WlhJNmMyVmpjbVYwTVRJeiJ9fX0=",
    },
    "kind": "Secret",
    "metadata": {
      "labels": {
        "app": "example-cron-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-cron-app-development-local",
      },
      "name": "docker-hub-cred",
      "namespace": "example-cron-app-test",
    },
    "type": "kubernetes.io/dockerconfigjson",
  },
  {
    "apiVersion": "batch/v1",
    "kind": "CronJob",
    "metadata": {
      "labels": {
        "app": "example-cron-app",
        "environment": "development",
        "instance": "cron-job-example",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "v2.2",
        "role": "cronjob",
        "service": "example-cron-app-development-local",
      },
      "name": "cron-job-example",
      "namespace": "example-cron-app-test",
    },
    "spec": {
      "failedJobsHistoryLimit": 1,
      "jobTemplate": {
        "spec": {
          "backoffLimit": 6,
          "template": {
            "metadata": {
              "labels": {
                "app": "example-cron-app",
                "environment": "development",
                "instance": "cron-job-example",
                "managed-by": "cdk8s",
                "region": "local",
                "release": "v2.2",
                "role": "cronjob",
                "service": "example-cron-app-development-local",
              },
            },
            "spec": {
              "containers": [
                {
                  "command": [
                    "/bin/sh",
                    "-c",
                    "echo hello",
                  ],
                  "image": "docker.io/organization/my-app:cron-v2.2",
                  "imagePullPolicy": "IfNotPresent",
                  "name": "example-cron-app",
                  "resources": {
                    "requests": {
                      "cpu": "100m",
                      "memory": "100Mi",
                    },
                  },
                  "workingDir": "/some/path",
                },
              ],
              "imagePullSecrets": [
                {
                  "name": "docker-hub-cred",
                },
              ],
              "restartPolicy": "Never",
            },
          },
        },
      },
      "schedule": "0 0 13 * 5",
      "successfulJobsHistoryLimit": 3,
    },
  },
]
`;

exports[`CronJob example > Snapshot 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Namespace",
    "metadata": {
      "labels": {
        "app": "example-cron-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-cron-app-development-local",
      },
      "name": "example-cron-app-test",
      "namespace": "example-cron-app-test",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "ResourceQuota",
    "metadata": {
      "labels": {
        "app": "example-cron-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-cron-app-development-local",
      },
      "name": "quota",
      "namespace": "example-cron-app-test",
    },
    "spec": {
      "hard": {
        "cpu": "200m",
        "memory": "200Mi",
        "pods": 2,
      },
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      ".dockerconfigjson": "eyJhdXRocyI6eyJodHRwczovL2luZGV4LmRvY2tlci5pby92MS8iOnsiYXV0aCI6ImMyOXRaWFZ6WlhJNmMyVmpjbVYwTVRJeiJ9fX0=",
    },
    "kind": "Secret",
    "metadata": {
      "labels": {
        "app": "example-cron-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-cron-app-development-local",
      },
      "name": "docker-hub-cred",
      "namespace": "example-cron-app-test",
    },
    "type": "kubernetes.io/dockerconfigjson",
  },
  {
    "apiVersion": "batch/v1",
    "kind": "CronJob",
    "metadata": {
      "labels": {
        "app": "example-cron-app",
        "environment": "development",
        "instance": "cron-job-example",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "v1.0",
        "role": "cronjob",
        "service": "example-cron-app-development-local",
      },
      "name": "cron-job-example",
      "namespace": "example-cron-app-test",
    },
    "spec": {
      "failedJobsHistoryLimit": 1,
      "jobTemplate": {
        "spec": {
          "backoffLimit": 6,
          "template": {
            "metadata": {
              "labels": {
                "app": "example-cron-app",
                "environment": "development",
                "instance": "cron-job-example",
                "managed-by": "cdk8s",
                "region": "local",
                "release": "v1.0",
                "role": "cronjob",
                "service": "example-cron-app-development-local",
              },
            },
            "spec": {
              "containers": [
                {
                  "command": [
                    "/bin/sh",
                    "-c",
                    "echo hello",
                  ],
                  "image": "docker.io/organization/my-app:cron-v1.0",
                  "imagePullPolicy": "IfNotPresent",
                  "name": "example-cron-app",
                  "resources": {
                    "requests": {
                      "cpu": "100m",
                      "memory": "100Mi",
                    },
                  },
                  "workingDir": "/some/path",
                },
              ],
              "imagePullSecrets": [
                {
                  "name": "docker-hub-cred",
                },
              ],
              "restartPolicy": "Never",
            },
          },
        },
      },
      "schedule": "0 0 13 * 5",
      "successfulJobsHistoryLimit": 3,
    },
  },
]
`;
